<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.skhanna1.countbook2.ListActivity"
    android:focusable="false"
    android:focusableInTouchMode="false">

    <Button
        android:id="@+id/button"
        android:layout_width="103dp"
        android:layout_height="53dp"
        android:text="@string/addCounter"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/naming"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nameCounter"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterList" />

    <ListView
        android:id="@+id/counterList"
        android:layout_width="476dp"
        android:layout_height="419dp"
        android:clickable="true"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="textShortMessage|textPersonName"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/naming" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/Zero"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/naming"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.505"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/counterList" />

    <Button
        android:id="@+id/clear"
        android:layout_width="80dp"
        android:layout_height="43dp"
        android:layout_marginRight="8dp"
        android:text="clear"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="191dp"
        android:layout_height="72dp"
        android:text="Long press date to delete Item"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.615"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/total"
        android:layout_width="72dp"
        android:layout_height="61dp"
        android:layout_marginBottom="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="16dp"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintRight_toLeftOf="@+id/clear"
        android:layout_marginRight="16dp" />

</android.support.constraint.ConstraintLayout>
